--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "cookie-parser": "^1.4.7",
     "csurf": "^1.11.0",
     "dotenv": "^16.4.7",
+    "googleapis": "^146.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.13.0",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
